# 9-API/internal/infra/webserver/handlers/user_handler.go
@@ -11,6 +11,10 @@ import (
 	"github.com/willbrr.dev/goexpert/9-API/internal/infra/database"
 )
 
+type Error struct {
+	Message string `json:"message"`
+}
+
 type UserHandler struct {
 	UserDB database.UserInterface
 }
@@ -53,21 +57,38 @@ func (h *UserHandler) Login(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(accessToken)
 }
 
+// Create user godoc
+// @Summary     Create a new user
+// @Description Create a new user
+// @Tags        users
+// @Accept      json
+// @Produce     json
+// @Param       request body dto.CreateUserInput true "User object that needs to be created"
+// @Success     201
+// @Failure     400 {object} Error
+// @Failure     500 {object} Error
+// @Router      /users [post]
 func (h *UserHandler) Create(w http.ResponseWriter, r *http.Request) {
 	var user dto.CreateUserInput
 	err := json.NewDecoder(r.Body).Decode(&user)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
+		error := Error{Message: "Invalid request body"}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	u, err := entity.NewUser(user.Name, user.Email, user.Password)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	err = h.UserDB.Create(u)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: "Failed to create user"}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusCreated)
